RESOLVED FIXED59554
WebKit2: Docked Inspector doesn't behave well if inspected web view isn't at 0,0
https://bugs.webkit.org/show_bug.cgi?id=59554
Summary WebKit2: Docked Inspector doesn't behave well if inspected web view isn't at 0,0
Brian Weinstein
Reported 2011-04-26 16:00:13 PDT
The docked web inspector doesn't resize well when the inspected web view isn't at 0, 0. It can cause strange window placement issues and drawing artifacts. <rdar://problem/9341188>
Attachments
[PATCH] Fix (2.81 KB, patch)
2011-04-26 16:08 PDT, Brian Weinstein
sfalken: review+
Brian Weinstein
Comment 1 2011-04-26 16:08:26 PDT
Created attachment 91176 [details] [PATCH] Fix
Brian Weinstein
Comment 2 2011-04-26 16:13:14 PDT
Landed in r84970.
Note You need to log in before you can comment on or make changes to this bug.