WebKit2: Docked Inspector doesn't behave well if inspected web view isn't at 0,0 https://bugs.webkit.org/show_bug.cgi?id=59554 <rdar://problem/9341188>

Reviewed by Steve Falkenburg.

Use GetWindowRect and ScreenToClient to properly place our inspector and inspected
web views instead of using GetClientRect. We need to correctly handle the case where
the inspected web view isn't at 0, 0.

* UIProcess/win/WebInspectorProxyWin.cpp:
(WebKit::WebInspectorProxy::platformSetAttachedWindowHeight):



Canonical link: https://commits.webkit.org/74692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84970 268f45cc-cd09-0410-ab3c-d52691b4dbfc